--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "test": "npm-run-all test:html",
+    "test": "npm-run-all test:*",
     "test:html": "html-validate *.html",
+    "test:js": "eslint js/*.js",
     "build": "npm-run-all build:* test",
     "build:sass": "sass --style=compressed --no-source-map sass:css",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
-    "watch":"npm-run-all build build-dev -p watch:*",
+    "watch": "npm-run-all build build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
+    "watch:eslint": "esw --watch --changed --clear",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
   "repository": {
@@ -32,6 +34,8 @@
   "homepage": "https://github.com/gruzlokonrad/module4#readme",
   "devDependencies": {
     "autoprefixer": "^10.2.4",
+    "eslint": "^8.19.0",
+    "eslint-watch": "^8.0.0",
     "html-validate": "^7.1.1",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
